Adding annotations. Quick code cleanup and modernization.